[package]
name = "bouncer"
version = "1.0.0"
authors = ["louise <email@luisignac.io>"]
edition = "2018"
license = "MIT"
description = "Bouncer allows you handle your requests to third-party services with no worries, perhaps some worries."
documentation = "https://github.com/thelastinuit/bouncer"
homepage = "https://github.com/thelastinuit/Bouncer" 
repository = "https://github.com/thelastinuit/bouncer.git"

[dependencies]
redis = { "version" = "0.16.0" }
serde = { "version" = "1.0.114", features = ["derive"] }
serde_json = { "version" = "1.0" }
tokio = { "version" = "0.2.21", features = ["full"] }
